--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
 	id 'org.springframework.boot' version '2.1.4.RELEASE'
 	id 'java'
+	id 'eclipse'
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -19,11 +20,11 @@ ext {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.cloud:spring-cloud-gcp-starter'
-	implementation 'org.springframework.cloud:spring-cloud-gcp-starter-storage'
+	//implementation 'org.springframework.cloud:spring-cloud-gcp-starter'
+	//implementation 'org.springframework.cloud:spring-cloud-gcp-starter-storage'
 	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
